export const snapshot = {};

snapshot[`code_hightlight plugin 1`] = `2`;

snapshot[`code_hightlight plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`code_hightlight plugin 3`] = `
[
]
`;

snapshot[`code_hightlight plugin 4`] = `
{
  content: '<!DOCTYPE html>
<html><head></head><body><h1>Code highlight plugin testing</h1>
<pre><code class="language-html hljs language-xml"><span class="hljs-tag">&lt;<span class="hljs-name">p</span>&gt;</span>This is a HTML code<span class="hljs-tag">&lt;/<span class="hljs-name">p</span>&gt;</span>
</code></pre>
<pre><code>Not highlighted code
</code></pre>
<pre><code class="language-css hljs"><span class="hljs-selector-tag">p</span> {
  <span class="hljs-attribute">color</span>: red
}
</code></pre>
</body></html>',
  data: {
    content: "# Code highlight plugin testing

\`\`\`html
<p>This is a HTML code</p>
\`\`\`

\`\`\`
Not highlighted code
\`\`\`

\`\`\`css
p {
  color: red
}
\`\`\`
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/index",
    remote: undefined,
    slug: "index",
  },
}
`;

snapshot[`code_hightlight plugin 5`] = `
{
  content: '<!DOCTYPE html>
<html><head></head><body>
  <pre>Code inside a PRE</pre>
  <code>Code inside a CODE</code>
  <pre><code>Not highlighted code</code></pre>
  <pre class="language-css"><code class="hljs language-css"><span class="hljs-selector-tag">p</span> { <span class="hljs-attribute">display</span>: none }</code></pre>

</body></html>',
  data: {
    content: '<html>
<body>
  <pre>Code inside a PRE</pre>
  <code>Code inside a CODE</code>
  <pre><code>Not highlighted code</code></pre>
  <pre class="language-css"><code>p { display: none }</code></pre>
</body>
</html>',
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/other/",
  },
  dest: {
    ext: ".html",
    path: "/other/index",
  },
  src: {
    asset: undefined,
    ext: ".njk",
    path: "/other",
    remote: undefined,
    slug: "other",
  },
}
`;
